# telegram-mcp

./: .gitignore  Cargo.toml  README.md
crates/domain/: Cargo.toml
crates/domain/src/: ports.rs
crates/domain/src/models/: chat.rs  message.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: cli_common.rs  lib.rs
crates/tg-client/: Cargo.toml
crates/tg-client/src/: client.rs  config.rs  lib.rs
